@@ -1,5 +1,17 @@
 2023-10-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/SDCCpeeph.c:
+	  operandsNotRelated improvements for mcs51 (and related), based on patch 1 from patch ticket #466 by Oleg Endo.
+	  src/mcs51/gen.c:
+	  Patch 2 from patch ticket #466 by Oleg Endo.
+	  src/mcs51/peep.c,
+	  src/mcs51/ralloc.c,
+	  src/mcs51/ralloc.h,
+	  src/mcs51/rtrack.c:
+	  Patch 3 from patch ticket #466 by Oleg Endo.
+
+2023-10-28 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/SDCCgenconstprop.cc:
 	  Fix generalized constant propagation analysis of pointers for host with 32-bit long (bug #3667).
 
